@startuml

abstract class Function
abstract class AssemblyFunction

class MemoryMarkFunction
class MemoryRegisterFunction
class MemorySweepFunction

Function <|-- AssemblyFunction

AssemblyFunction <|-- MemoryMarkFunction
AssemblyFunction <|-- MemoryRegisterFunction
AssemblyFunction <|-- MemorySweepFunction

@enduml
